EKS_OpenSource_install/gitlab_install_in_eks/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - image: gitlab/gitlab-ce
        name: gitlab
        ports:
        - containerPort: 80
        - containerPort: 443
        - containerPort: 22
        volumeMounts:
          - mountPath: /etc/gitlab
            name: gitlab-config-volume
          - mountPath: /var/opt/gitlab
            name: gitlab-data-volume
      volumes:
        - name: gitlab-config-volume
          persistentVolumeClaim:
            claimName: gitlab-config
        - name: gitlab-data-volume
          persistentVolumeClaim:
            claimName: gitlab-data
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
  namespace: gitlab
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: httpd
  - port: 22
    targetPort: 22
    protocol: TCP
    name: ssh 
  selector:
    app: gitlab
