EKS_OpenSource_install/gitlab_install_in_eks/install.yml
---
   
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - image: gitlab/gitlab-ce
        name: gitlab
        resources:
          limits:
           cpu: "500m"
        ports:
        - containerPort: 80
        - containerPort: 443
        - containerPort: 22
        volumeMounts:
          - mountPath: /etc/gitlab
            name: gitlab-config-volume
          - mountPath: /var/opt/gitlab
            name: gitlab-data-volume
      volumes:
        - name: gitlab-config-volume
          persistentVolumeClaim:
            claimName: gitlab-config
        - name: gitlab-data-volume
          persistentVolumeClaim:
            claimName: gitlab-data
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
  namespace: gitlab
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31095
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    nodePort: 31096
    protocol: TCP
    name: httpd
  - port: 22
    targetPort: 22
    nodePort: 31097
    protocol: TCP
    name: ssh 
  selector:
    app: gitlab

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab # 수정
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:963897741994:certificate/b8e82170-53ce-4e70-92d5-6d4339ca8df4 # 그대로 사용
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    external-dns.alpha.kubernetes.io/hostname: gitlab.ihp001.dev # 각 서비스에 맞게 수정
spec:
  rules:
    - host: gitlab.ihp001.dev # 각 서비스에 맞게 수정
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service: 
                name: ssl-redirect
                port: 
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: gitlab-service # 수정
                port: 
                  number: 80 # 수정
